--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/js-data/2.9.0/js-data.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/js-data-firebase/2.1.1/js-data-firebase.js"></script>
-<link href="/app.7d2faed5ccea18089835.css" rel="stylesheet"></head>
+<link href="app.7d2faed5ccea18089835.css" rel="stylesheet"></head>
 
 <body>
 
@@ -41,6 +41,6 @@
 		<app></app>
 	</div>
 
-<script src="/app.7d2faed5ccea18089835.js"></script></body>
+<script src="app.7d2faed5ccea18089835.js"></script></body>
 
 </html>
