--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
 	<title>BoiseCodeWorks Student Blog | {{title}} {{post.title}}</title>
 	<link rel="icon" type="image/x-icon" href="/img/favicon.ico">
-	<base href="/">
+	<base href="http://boisecodeworks.github.io/blog/">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.3.0/showdown.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ng-showdown/1.1.0/ng-showdown.min.js"></script>
